--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,6 @@
   </head>
   <body>
     <div id="app" />
-    <script src="public/dist/bundle.js" type="text/javascript"></script>
+    <script src="./dist/bundle.js" type="text/javascript"></script>
   </body>
 </html>
